[package]
name = "atlas77-wasm"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atlas_77 = { git = "https://github.com/atlas77-lang/atlas77", branch = "v0.6.x" }
wasm-bindgen = "0.2.106"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
getrandom ={ version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size

[features]
default = ["console_error_panic_hook"]
